--- a/src/components/weather.css
+++ b/src/components/weather.css
@@ -9,7 +9,7 @@
   padding: 0px 20px 20px 20px;
   margin-left: 25%;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  background: #2980b9; /* fallback for old browsers */
+  background: #2980b9; /* fallback */
   background: -webkit-linear-gradient(
     45deg,
     #ffffff,
